Closed
Bug 620402
Opened 15 years ago
Closed 15 years ago
crash [@ gfxTextRun::BreakAndMeasureText] if haveHyphenation && !aProvider
Categories
(Core :: Graphics, defect)
Core
Graphics
Tracking
()
RESOLVED
FIXED
mozilla2.0b9
People
(Reporter: timeless, Assigned: timeless)
References
(Blocks 1 open bug)
Details
(Keywords: coverity, crash)
Crash Data
Attachments
(1 file)
|
860 bytes,
patch
|
roc
:
review+
roc
:
approval2.0+
|
Details | Diff | Splinter Review |
3568 gfxTextRun::BreakAndMeasureText(PRUint32 aStart, PRUint32 aMaxLength,
3580 {
3583 NS_ASSERTION(aStart + aMaxLength <= mCharacterCount, "Substring out of range");
null check:
3588 PRBool haveSpacing = aProvider && (mFlags & gfxTextRunFactory::TEXT_ENABLE_SPACING) != 0;
3589 if (haveSpacing) {
3590 GetAdjustedSpacing(this, bufferStart, bufferStart + bufferLength, aProvider,
3591 spacingBuffer);
3592 }
3593 PRPackedBool hyphenBuffer[MEASUREMENT_BUFFER_SIZE];
3594 PRBool haveHyphenation = (mFlags & gfxTextRunFactory::TEXT_ENABLE_HYPHEN_BREAKS) != 0;
3595 if (haveHyphenation) {
no null check:
3596 aProvider->GetHyphenationBreaks(bufferStart, bufferLength,
3597 hyphenBuffer);
Assignee: nobody → timeless
Status: NEW → ASSIGNED
Attachment #498888 -
Flags: review?(roc)
Attachment #498888 -
Flags: approval2.0?
Attachment #498888 -
Flags: review?(roc)
Attachment #498888 -
Flags: review+
Attachment #498888 -
Flags: approval2.0?
Attachment #498888 -
Flags: approval2.0+
Keywords: checkin-needed
Comment 2•15 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite-
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b9
Updated•14 years ago
|
Crash Signature: [@ gfxTextRun::BreakAndMeasureText]
Updated•7 years ago
|
Blocks: coverity-analysis
You need to log in
before you can comment on or make changes to this bug.
Description
•