Bug 620402 crash [@ gfxTextRun::BreakAndMeasureText] if haveHyphenation && !aProvider, r+a=roc